img added, letter finished

--- a/src/assets/scss/_settings.scss
+++ b/src/assets/scss/_settings.scss
@@ -16,8 +16,8 @@
 // 1. Global
 // ---------
 
-$primary-color: #5230F2;
-$secondary-color: #FF8A80;
+$primary-color: #FF8A80;
+$secondary-color: #5230F2;
 $success-color: #3adb76;
 $warning-color: #ffae00;
 $alert-color: #ec5840;
