--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -11,3 +11,15 @@
     padding-top: 20px;
     padding-bottom: 20px;
  }
+.social {
+    width: 20px;
+}
+.top-margin {
+    margin-top: 40px;
+}
+.add-padding {
+    padding: 40px 0;
+}
+.second-color {
+    color: $secondary-color;
+}
